crates/vtop-core/tests/snapshots/snapshot_manifest__kafka_manifest_self_hash.snap
---
source: crates/vtop-core/tests/snapshot_manifest.rs
expression: m.manifest.sha256
---
9e2c72ecc55fdb0dc623f93611a6195eaa055f8bab993f8fb4238a6d985e80d4
